--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
     "mongodb": "^6.3.0",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "typeface-roboto": "^1.1.13"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
-    "postcss": "^8",
+    "postcss": "^8.4.32",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
